<resources>
    <string name="app_name">D-Tools</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_copy_to_clipboard">Copied to Clipboard</string>
    <string name="toast_please_wait">Task in progress, please wait</string>


    <string name="best_cdn_ip">Best CDN IP</string>
    <string name="best_cdn_ip_summary">Test the latency from local to CDN IP and select the best one.</string>
    <string name="best_cdn_ip_result_hint">Best CDN IP result</string>
    <string name="best_cdn_ip_max_cdn_ips">Maximum number of CDN IP</string>
    <string name="best_cdn_ip_max_latency">Maximum latency limit</string>

    <string name="cloudflare_wrap">Cloudflare Warp</string>
    <string name="cloudflare_wrap_summary">CloudFlare Warp is a free WireGuard VPN provider. By using it, you agree to the TOS.</string>
    <string name="generating">Generating…</string>
    <string name="cloudflare_wrap_result_hint">Cloudflare Warp result</string>

    <string name="stun_test">NAT behaviour discovery</string>
    <string name="stun_test_summary">Determine the client\'s NAT mapping behaviour and the NAT filtering behaviour defined in RFC 3478 using STUN.</string>
    <string name="start">Start</string>
    <string name="nat_stun_server_hint">STUN server</string>
    <string name="nat_result_hint">NAT check result</string>

    <string name="scanning">Scanning…</string>
    <string name="scan_vpn_app">Scan VPN apps</string>
    <string name="scan_vpn_app_summary">Check the VPN installed on the device and its type.</string>
    <string name="vpn_app_type">App type</string>
    <string name="vpn_core_type">Core type</string>
    <string name="vpn_core_path">Detected path</string>
    <string name="vpn_golang_version">Go version</string>
    <string name="vpn_app_type_other">Other</string>
    <string name="vpn_core_type_unknown">Unknown</string>

    <string name="title_about">About</string>
    <string name="title_pref_feedback">Feedback</string>
    <string name="title_privacy_policy">Privacy policy</string>
    <string name="title_source_code">Source code</string>
    <string name="title_tg_channel">Telegram channel</string>

</resources>